--- a/Console EMV Tests/Console EMV Tests.csproj
+++ b/Console EMV Tests/Console EMV Tests.csproj
@@ -15,7 +15,6 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -124,9 +123,9 @@
       <Project>{162E1CB7-03F5-4F2A-9DEE-0FEAF07EF4CE}</Project>
       <Name>EMV Library</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\WSCT Core\WSCT.Wrapper\WSCT.Wrapper.linux.csproj">
-      <Project>{24FA07AF-D2A2-4CB1-9D3D-AC9A9F2451D0}</Project>
-      <Name>WSCT.Wrapper.linux</Name>
+    <ProjectReference Include="..\..\WSCT Core\WSCT.Wrapper\WSCT.Wrapper.csproj">
+      <Project>{19B66E6E-7E5E-481A-8718-3F9C44212AD6}</Project>
+      <Name>WSCT.Wrapper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
