--- a/WSCT.GUI.EMVLauncher/WSCT.GUI.EMVLauncher.csproj
+++ b/WSCT.GUI.EMVLauncher/WSCT.GUI.EMVLauncher.csproj
@@ -52,6 +52,9 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>chip2.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -138,6 +141,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="chip2.ico" />
     <Content Include="Stack.Channel.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
