--- a/Plugin EMV Explorer/Plugin EMV Explorer.csproj
+++ b/Plugin EMV Explorer/Plugin EMV Explorer.csproj
@@ -46,18 +46,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DetailedLogs.cs" />
-    <Compile Include="GUI.cs">
+    <Compile Include="Gui.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI.Designer.cs">
-      <DependentUpon>GUI.cs</DependentUpon>
+    <Compile Include="Gui.Designer.cs">
+      <DependentUpon>Gui.cs</DependentUpon>
     </Compile>
     <Compile Include="PluginConfiguration.cs" />
     <Compile Include="PluginEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GUI.resx">
+    <EmbeddedResource Include="Gui.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>GUI.cs</DependentUpon>
+      <DependentUpon>Gui.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
