--- a/EMV Library Unit Tests/EMV Library Unit Tests.csproj
+++ b/EMV Library Unit Tests/EMV Library Unit Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Objects\DataObjectListUnitTest.cs" />
     <Compile Include="Objects\LogEntryUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\IssuerPublicKeyCertificateUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WSCT Core\WSCT.Core\WSCT.Core.csproj">
