- Projects structure cleanup

--- a/EMV Library/EMV Library.csproj
+++ b/EMV Library/EMV Library.csproj
@@ -42,16 +42,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BouncyCastle.Crypto">
-      <HintPath>..\packages\BouncyCastle.1.7.0\lib\Net40-Client\BouncyCastle.Crypto.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Security" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Card\EMVApplication.cs" />
     <Compile Include="Card\EMVDefinitionFile.cs" />
     <Compile Include="Card\PaymentSystemEnvironment.cs" />
@@ -141,14 +131,16 @@
       <Project>{4EABE8DA-0BCB-4BC6-A571-7618AC0EC4B6}</Project>
       <Name>WSCT.Stack</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\WSCT Core\WSCT.Wrapper.Core\WSCT.Wrapper.Core.csproj">
-      <Project>{f0afba85-a6f7-4a45-8dc8-3346d7060629}</Project>
-      <Name>WSCT.Wrapper.Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\WSCT Core\WSCT.Wrapper\WSCT.Wrapper.csproj">
-      <Project>{19B66E6E-7E5E-481A-8718-3F9C44212AD6}</Project>
+      <Project>{f0afba85-a6f7-4a45-8dc8-3346d7060629}</Project>
       <Name>WSCT.Wrapper</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto">
+      <HintPath>..\..\WSCT JCOP\packages\BouncyCastle.1.7.0\lib\Net40-Client\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
