--- a/EMV Library/packages.config
+++ b/EMV Library/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.7.0" targetFramework="net45" />
+  <package id="Portable.BouncyCastle" version="1.7.0" targetFramework="portable-net45+win+wp80+MonoAndroid10+MonoTouch10" />
 </packages>
