--- a/EMV Library Unit Tests/EMV Library Unit Tests.csproj
+++ b/EMV Library Unit Tests/EMV Library Unit Tests.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Objects\ApplicationLabelUnitTest.cs" />
     <Compile Include="Objects\DataObjectListUnitTest.cs" />
     <Compile Include="Objects\LogEntryUnitTest.cs" />
+    <Compile Include="Personalization\DgiBuilderUnitTest.cs" />
+    <Compile Include="Personalization\LogModelUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CryptographyUnitTest.cs" />
     <Compile Include="Security\IssuerPublicKeyCertificateUnitTest.cs" />
@@ -80,6 +82,10 @@
     <Compile Include="Security\Sha1HashAlgorithmProviderUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\WSCT Core\WSCT.Helpers.Desktop\WSCT.Helpers.Desktop.csproj">
+      <Project>{A3EEF6F2-8509-4EB2-A8B3-B31786EBB248}</Project>
+      <Name>WSCT.Helpers.Desktop</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\WSCT Core\WSCT.Helpers\WSCT.Helpers.csproj">
       <Project>{b95b0e58-9296-4a15-aa69-10a7b6dc2267}</Project>
       <Name>WSCT.Helpers</Name>
